+Партирование для архивов.

--- a/Docflow/Docflow/Web.config
+++ b/Docflow/Docflow/Web.config
@@ -33,6 +33,7 @@
     <add key="SheduleSettings" value="0 03-04 16 ? * *" />
     <add key="JobPartTime" value="15" />
     <add key="ServerContractFilesPathName" value="\\dc1-ltfo-app1\files\ContractFile\"/>
+    <add key="countToArchive" value="укажите отправителя" />
     <add key="emailFrom" value="укажите отправителя" />
     <add key="emailHost" value="укажите хост" />
     <add key="emailPort" value="укажите порт" />
