Оптимизация и правки по замечаниям

--- a/Docflow/Docflow/Web.config
+++ b/Docflow/Docflow/Web.config
@@ -32,7 +32,7 @@
     <add key="ContractIdentifiresSavePath" value="D:\Temp\123\" />
     <add key="SheduleSettings" value="0 03-04 16 ? * *" />
     <add key="JobPartTime" value="15" />
-    <add key="ServerContractFilesPathName" value="\\dc1-ltfo-app1\files\ContractFile\"/>
+    <add key="ServerSource" value="\\dc1-ltfo-app1\files"/>
     <add key="countToArchive" value="укажите отправителя" />
     <add key="emailFrom" value="укажите отправителя" />
     <add key="emailHost" value="укажите хост" />
